# Foster-Hormann

./: .gitignore  CMakeLists.txt  README.md  README_src.txt  build.sh  polyclip.cpp  polygon.h  visual_poly.py
